--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "quill": "^2.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "shadcn": "^2.1.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.0.2",
     "eslint": "^8",
